try two columns

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 					<div class="switch" id="event-filter" onclick="flipSwitch('event')">events</div>
 					<div class="switch" id="milestone-filter" onclick="flipSwitch('milestone')">milestones</div>
 				</div>
+				<button id="export-btn" onclick="window.location='https://calendar.google.com/calendar/embed?src=rso5amnhq262e8r8k5p3c3oqeg%40group.calendar.google.com&amp;ctz=America%2FNew_York'">export</button>
 			</div>	
 
 			<div id="weekone"></div>
