drop the two weeks plan on page

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 					</div>
 				</div>
 
-				<div class="day lec lunch oh milestone ">
+				<div class="day oh milestone">
 					<h3 class="date">4月3日 星期日</h3>
 					<div class="oh">
 						<div class="time">07:00PM - 09:00PM</div>
@@ -109,6 +109,32 @@
 						<div class="resources"></div>
 					</div>
 				</div>	
+
+				<div class="day milestone ">
+					<h3 class="date">4月10日 星期日</h3>
+					<div class="milestone">
+						<div class="time">11:59PM</div>
+						<div class="name">
+							<span>开发节点二 提交成果</span>
+						</div>
+						<div class="room"></div>
+						<div class="resources"></div>
+					</div>
+				</div>	
+
+				<div class="day oh">
+					<h3 class="date">4月11日 星期一</h3>
+					<div class="oh">
+						<div class="time">07:00PM - 09:00PM</div>
+						<div class="name">
+							<span>待讨论：二期网站上线的固定成本构成、网站运维方案与网站迁移</span>
+						</div>
+						<div class="room">32-082</div>
+						<div class="resources"></div>
+					</div>
+
+				</div>	
+
 			</div>
 
 		</div>
