added week mark

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
 					</div>
 				</div>	
 
+				<articlemark class="mark" id="weektwo"></articlemark>
 				<div class="day milestone ">
 					<h3 class="date">4月10日 星期日</h3>
 					<div class="milestone">
@@ -122,6 +123,7 @@
 					</div>
 				</div>	
 
+				<articlemark class="mark" id="weekthree"></articlemark>
 				<div class="day oh">
 					<h3 class="date">4月11日 星期一</h3>
 					<div class="oh">
