--- a/index.html
+++ b/index.html
@@ -63,8 +63,84 @@
 
 				<div id="weekone"></div>
 
-<div class="day lec lunch oh "><h3 class="date">monday, january 3</h3><div class="lec"><div class="time">11:00AM - 11:30AM</div><div class="name"><span>Kick Off</span><div class="lecturer">Lecturer: Claire Cheng &amp;amp; Daniel Sun</div></div><div class="room">10-250</div><div class="resources"><a href="https://docs.google.com/presentation/d/1l67OznkGj_sopRDzieZOH6eq1zOu5iNqMO4hAOEf0sQ/edit?usp=sharing"><i class="far fa-file-pdf"></i></a><a href="https://www.youtube.com/watch?v=fg64qyD3yEc"><i class="fab fa-youtube"></i></a></div></div><div class="lec"><div class="time">11:30AM - 12:30PM</div><div class="name"><span>Intro to Git/Github</span><div class="lecturer">Lecturer: Kevin Sun Chen &amp;amp; Albert Xing</div></div><div class="room">10-250</div><div class="resources"><a href="https://docs.google.com/presentation/d/1FY2B6fZPowYPdQLUUYBtJW12SIVQzMaL5u-PSEG3nKI/edit?usp=sharing"><i class="far fa-file-pdf"></i></a><a href="https://www.youtube.com/watch?v=f6F5VYitT7g"><i class="fab fa-youtube"></i></a></div></div><div class="lunch"><div class="time">12:30PM - 01:00PM</div><div class="name"><span>LUNCH</span></div><div class="room"></div><div class="resources"></div></div><div class="lec"><div class="time">01:00PM - 01:30PM</div><div class="name"><span>Intro to HTML/CSS</span><div class="lecturer">Lecturer: Thanh Nguyen</div></div><div class="room">10-250</div><div class="resources"><a href="https://docs.google.com/presentation/d/1pbhvdAKglYl8Uz7tEh-iXtlkWqiONeIiIjKGLdGvZlY/edit?usp=sharing"><i class="far fa-file-pdf"></i></a><a href="https://www.youtube.com/watch?v=e3fxgPk7LlI"><i class="fab fa-youtube"></i></a></div></div><div class="lec"><div class="time">01:30PM - 03:00PM</div><div class="name"><span>W0: HTML/CSS</span><div class="lecturer">Lecturer: Thanh Nguyen</div></div><div class="room">10-250</div><div class="resources"><a href="https://docs.google.com/presentation/d/1pbhvdAKglYl8Uz7tEh-iXtlkWqiONeIiIjKGLdGvZlY/edit?usp=sharing"><i class="far fa-file-pdf"></i></a><a href="https://www.youtube.com/watch?v=WzSKqhhZxmY"><i class="fab fa-youtube"></i></a></div></div><div class="oh"><div class="time">07:00PM - 09:00PM</div><div class="name"><span>Office Hours</span></div><div class="room">32-082</div><div class="resources"></div></div><div class="lec"><div class="time">11:59PM</div><div class="name"><span>Homework 1</span></div><div class="room"></div><div class="resources"><a href="//weblab.to/homework1&quot; id=&quot;ow438&quot; __is_owner=&quot;true&quot;>weblab.to/homework1</a>"></a></div></div></div>
-				
+				<div class="day lec lunch oh ">
+					<h3 class="date">monday, january 3</h3>
+					<div class="lec">
+						<div class="time">11:00AM - 11:30AM</div><div class="name">
+							<span>Kick Off</span>
+							<div class="lecturer">Lecturer: Claire Cheng &amp;amp; Daniel Sun</div>
+						</div>
+						<div class="room">10-250</div>
+						<div class="resources">
+							<a href="https://docs.google.com/presentation/d/1l67OznkGj_sopRDzieZOH6eq1zOu5iNqMO4hAOEf0sQ/edit?usp=sharing">
+								<i class="far fa-file-pdf">
+								</i>
+							</a>
+							<a href="https://www.youtube.com/watch?v=fg64qyD3yEc">
+								<i class="fab fa-youtube"></i>
+							</a>
+						</div>
+					</div>
+					<div class="lec">
+						<div class="time">11:30AM - 12:30PM</div><div class="name">
+							<span>Intro to Git/Github</span>
+							<div class="lecturer">Lecturer: Kevin Sun Chen &amp;amp; Albert Xing</div>
+						</div>
+						<div class="room">10-250</div>
+						<div class="resources">
+							<a href="https://docs.google.com/presentation/d/1FY2B6fZPowYPdQLUUYBtJW12SIVQzMaL5u-PSEG3nKI/edit?usp=sharing">
+								<i class="far fa-file-pdf"></i>
+							</a>
+							<a href="https://www.youtube.com/watch?v=f6F5VYitT7g">
+								<i class="fab fa-youtube"></i>
+							</a>
+						</div>
+					</div>
+					<div class="lunch">
+						<div class="time">12:30PM - 01:00PM</div>
+						<div class="name">
+							<span>LUNCH</span>
+						</div>
+						<div class="room"></div>
+						<div class="resources"></div>
+					</div>
+					<div class="lec">
+						<div class="time">01:00PM - 01:30PM</div>
+						<div class="name">
+							<span>Intro to HTML/CSS</span>
+							<div class="lecturer">Lecturer: Thanh Nguyen</div>
+						</div>
+						<div class="room">10-250</div>
+						<div class="resources">
+							<a href="https://docs.google.com/presentation/d/1pbhvdAKglYl8Uz7tEh-iXtlkWqiONeIiIjKGLdGvZlY/edit?usp=sharing">
+								<i class="far fa-file-pdf"></i>
+							</a>
+							<a href="https://www.youtube.com/watch?v=e3fxgPk7LlI">
+								<i class="fab fa-youtube"></i>
+							</a>
+						</div>
+					</div>
+					<div class="oh">
+						<div class="time">07:00PM - 09:00PM</div><div class="name">
+							<span>Office Hours</span>
+						</div>
+						<div class="room">32-082</div>
+						<div class="resources"></div>
+					</div>
+					<div class="lec">
+						<div class="time">11:59PM</div>
+						<div class="name">
+							<span>Homework 1</span>
+						</div>
+						<div class="room"></div>
+						<div class="resources">
+							<a href="//weblab.to/homework1&quot; id=&quot;ow438&quot; __is_owner=&quot;true&quot;>weblab.to/homework1</a>"></a>
+						</div>
+					</div>
+				</div>
+
+				<div class="day lec lunch "><h3 class="date">tuesday, january 4</h3><div class="lec"><div class="time">11:00AM - 12:00PM</div><div class="name"><span>Intro to Javascript</span><div class="lecturer">Lecturer: Albert Xing</div></div><div class="room">10-250</div><div class="resources"><a href="https://docs.google.com/presentation/d/1HxK7RegAF0hPNnUhICKAxw42pMGzDY0FF0MVairnPGc/edit?usp=sharing"><i class="far fa-file-pdf"></i></a><a href="https://www.youtube.com/watch?v=o4brcBVCzsw"><i class="fab fa-youtube"></i></a></div></div><div class="lec"><div class="time">12:00PM - 12:30PM</div><div class="name"><span>W1: Javascript</span><div class="lecturer">Lecturer: Albert Xing</div></div><div class="room">10-250</div><div class="resources"><a href="https://docs.google.com/presentation/d/1HxK7RegAF0hPNnUhICKAxw42pMGzDY0FF0MVairnPGc/edit?usp=sharing"><i class="far fa-file-pdf"></i></a><a href="https://www.youtube.com/watch?v=1a_C-ZVMtGE"><i class="fab fa-youtube"></i></a></div></div><div class="lunch"><div class="time">12:30PM - 01:00PM</div><div class="name"><span>LUNCH</span></div><div class="room"></div><div class="resources"></div></div><div class="lec"><div class="time">01:00PM - 02:00PM</div><div class="name"><span>W1: Javascript (continued)</span><div class="lecturer">Lecturer: Albert Xing</div></div><div class="room">10-250</div><div class="resources"><a href="https://docs.google.com/presentation/d/1HxK7RegAF0hPNnUhICKAxw42pMGzDY0FF0MVairnPGc/edit?usp=sharing"><i class="far fa-file-pdf"></i></a><a href="https://www.youtube.com/watch?v=1a_C-ZVMtGE"><i class="fab fa-youtube"></i></a></div></div><div class="lec"><div class="time">02:00PM - 03:00PM</div><div class="name"><span>React Part 1</span><div class="lecturer">Lecturer: Akshaj Kadaveru &amp;amp; Allen Ding</div></div><div class="room">10-250</div><div class="resources"><a href="https://docs.google.com/presentation/d/1wr58fv2XNTNlEbmbgedOlianOKCRc3I2hlxV4HDNwcg/edit?usp=sharing"><i class="far fa-file-pdf"></i></a><a href="https://www.youtube.com/watch?v=E0uvuti9lfk"><i class="fab fa-youtube"></i></a></div></div></div>
+
 				<div class="day lec milestone">
 					<h3 class="date">3月28日 星期一</h3>
 					<div class="milestone">
