--- a/index.html
+++ b/index.html
@@ -72,13 +72,8 @@
 						</div>
 						<div class="room">10-250</div>
 						<div class="resources">
-							<a href="https://docs.google.com/presentation/d/1l67OznkGj_sopRDzieZOH6eq1zOu5iNqMO4hAOEf0sQ/edit?usp=sharing">
-								<i class="far fa-file-pdf">
-								</i>
-							</a>
-							<a href="https://www.youtube.com/watch?v=fg64qyD3yEc">
-								<i class="fab fa-youtube"></i>
-							</a>
+							<a href="https://docs.google.com/presentation/d/1l67OznkGj_sopRDzieZOH6eq1zOu5iNqMO4hAOEf0sQ/edit?usp=sharing"><i class="far fa-file-pdf"></i></a>
+							<a href="https://www.youtube.com/watch?v=fg64qyD3yEc"><i class="fab fa-youtube"></i></a>
 						</div>
 					</div>
 					<div class="lec">
@@ -88,12 +83,8 @@
 						</div>
 						<div class="room">10-250</div>
 						<div class="resources">
-							<a href="https://docs.google.com/presentation/d/1FY2B6fZPowYPdQLUUYBtJW12SIVQzMaL5u-PSEG3nKI/edit?usp=sharing">
-								<i class="far fa-file-pdf"></i>
-							</a>
-							<a href="https://www.youtube.com/watch?v=f6F5VYitT7g">
-								<i class="fab fa-youtube"></i>
-							</a>
+							<a href="https://docs.google.com/presentation/d/1FY2B6fZPowYPdQLUUYBtJW12SIVQzMaL5u-PSEG3nKI/edit?usp=sharing"><i class="far fa-file-pdf"></i></a>
+							<a href="https://www.youtube.com/watch?v=f6F5VYitT7g"><i class="fab fa-youtube"></i></a>
 						</div>
 					</div>
 					<div class="lunch">
@@ -112,12 +103,8 @@
 						</div>
 						<div class="room">10-250</div>
 						<div class="resources">
-							<a href="https://docs.google.com/presentation/d/1pbhvdAKglYl8Uz7tEh-iXtlkWqiONeIiIjKGLdGvZlY/edit?usp=sharing">
-								<i class="far fa-file-pdf"></i>
-							</a>
-							<a href="https://www.youtube.com/watch?v=e3fxgPk7LlI">
-								<i class="fab fa-youtube"></i>
-							</a>
+							<a href="https://docs.google.com/presentation/d/1pbhvdAKglYl8Uz7tEh-iXtlkWqiONeIiIjKGLdGvZlY/edit?usp=sharing"><i class="far fa-file-pdf"></i></a>
+							<a href="https://www.youtube.com/watch?v=e3fxgPk7LlI"><i class="fab fa-youtube"></i></a>
 						</div>
 					</div>
 					<div class="oh">
@@ -157,12 +144,8 @@
 						</div>
 						<div class="room">10-250</div>
 						<div class="resources">
-							<a href="https://docs.google.com/presentation/d/1FY7ACT58YIP4OAMstNkilDLC3xKYfrWTE-RngCosHYA/edit?usp=sharing">
-								<i class="far fa-file-pdf"></i>
-							</a>
-							<a href="https://www.youtube.com/watch?v=c18sTH8wztw">
-								<i class="fab fa-youtube"></i>
-							</a>
+							<a href="https://docs.google.com/presentation/d/1FY7ACT58YIP4OAMstNkilDLC3xKYfrWTE-RngCosHYA/edit?usp=sharing"><i class="far fa-file-pdf"></i></a>
+							<a href="https://www.youtube.com/watch?v=c18sTH8wztw"><i class="fab fa-youtube"></i></a>
 						</div>
 					</div>
 				</div>
