--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
 				<div class="content">
 					<ul id="sidebar">
 						<li class="select" id="head_mark">
-							<a href="weekone">第一周：</a>
+							<a href="#weekone">第一周：</a>
 							3月28日 - 4月3日
 						</li>
 						<li id="weektwo_mark">
-							<a href="weektwo">第二周：</a>
+							<a href="#weektwo">第二周：</a>
 							4月4日 - 4月10日
 						</li>
 						<li id="weekthree_mark">
-							<a href="weekthree">第三周：</a>
+							<a href="#weekthree">第三周：</a>
 							4月11日 - 4月17日
 						</li>
 						<li id="weekfour_mark">
-							<a href="weekfour">第四周：</a>
+							<a href="#weekfour">第四周：</a>
 							4月18日 - 4月24日
 						</li>
 					</ul>
@@ -63,68 +63,7 @@
 
 				<div id="weekone"></div>
 
-				<div class="day lec lunch oh ">
-					<h3 class="date">monday, january 3</h3>
-					<div class="lec">
-						<div class="time">11:00AM - 11:30AM</div><div class="name">
-							<span>Kick Off</span>
-							<div class="lecturer">Lecturer: Claire Cheng &amp;amp; Daniel Sun</div>
-						</div>
-						<div class="room">10-250</div>
-						<div class="resources">
-							<a href="https://docs.google.com/presentation/d/1l67OznkGj_sopRDzieZOH6eq1zOu5iNqMO4hAOEf0sQ/edit?usp=sharing"><i class="far fa-file-pdf"></i></a>
-							<a href="https://www.youtube.com/watch?v=fg64qyD3yEc"><i class="fab fa-youtube"></i></a>
-						</div>
-					</div>
-					<div class="lec">
-						<div class="time">11:30AM - 12:30PM</div><div class="name">
-							<span>Intro to Git/Github</span>
-							<div class="lecturer">Lecturer: Kevin Sun Chen &amp;amp; Albert Xing</div>
-						</div>
-						<div class="room">10-250</div>
-						<div class="resources">
-							<a href="https://docs.google.com/presentation/d/1FY2B6fZPowYPdQLUUYBtJW12SIVQzMaL5u-PSEG3nKI/edit?usp=sharing"><i class="far fa-file-pdf"></i></a>
-							<a href="https://www.youtube.com/watch?v=f6F5VYitT7g"><i class="fab fa-youtube"></i></a>
-						</div>
-					</div>
-					<div class="lunch">
-						<div class="time">12:30PM - 01:00PM</div>
-						<div class="name">
-							<span>LUNCH</span>
-						</div>
-						<div class="room"></div>
-						<div class="resources"></div>
-					</div>
-					<div class="lec">
-						<div class="time">01:00PM - 01:30PM</div>
-						<div class="name">
-							<span>Intro to HTML/CSS</span>
-							<div class="lecturer">Lecturer: Thanh Nguyen</div>
-						</div>
-						<div class="room">10-250</div>
-						<div class="resources">
-							<a href="https://docs.google.com/presentation/d/1pbhvdAKglYl8Uz7tEh-iXtlkWqiONeIiIjKGLdGvZlY/edit?usp=sharing"><i class="far fa-file-pdf"></i></a>
-							<a href="https://www.youtube.com/watch?v=e3fxgPk7LlI"><i class="fab fa-youtube"></i></a>
-						</div>
-					</div>
-					<div class="oh">
-						<div class="time">07:00PM - 09:00PM</div><div class="name">
-							<span>Office Hours</span>
-						</div>
-						<div class="room">32-082</div>
-						<div class="resources"></div>
-					</div>
-					<div class="lec">
-						<div class="time">11:59PM</div>
-						<div class="name">
-							<span>Homework 1</span>
-						</div>
-						<div class="room"></div>
-						<div class="resources">
-							<a href="//weblab.to/homework1&quot; id=&quot;ow438&quot; __is_owner=&quot;true&quot;>weblab.to/homework1</a>"></a>
-						</div>
-					</div>
-				</div>
+<div class="day oh "><h3 class="date">monday, january 24</h3><div class="oh"><div class="time">07:00PM - 09:00PM</div><div class="name"><span>Office Hours</span></div><div class="room">32-082</div><div class="resources"></div></div></div>
 
 				<div class="day lec milestone">
 					<h3 class="date">3月28日 星期一</h3>
