added more plan #6

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				</div>	
 
 				<div id="weekone"></div>
-				<div class="day lec "><h3 class="date">3月27日 星期日</h3><div class="lec"><div class="time">07:00PM - 09:00PM</div><div class="name"><span>建立网站开发资源库</span><div class="lecturer">网站源代码放置在版本管理系统GitHub的同名仓库中</div></div><div class="room">32-082</div><div class="resources"></div></div></div>
+				<div class="day lec "><h3 class="date">3月27日 星期日</h3><div class="lec"><div class="time">07:00PM - 09:00PM</div><div class="name"><span>建立网站开发资源库</span><div class="lecturer">网站源代码放置在版本管理系统GitHub的同名仓库中</div></div><div class="room">已完成</div><div class="resources"></div></div></div>
 
 				<div class="day lec milestone ">
 					<h3 class="date">3月28日 星期一</h3>
@@ -90,7 +90,7 @@
 
 				<div class="day lunch "><h3 class="date">3月29日 星期二</h3><div class="lunch"><div class="time">07:00PM - 09:00PM</div><div class="name"><span>开发模块1：静态页面的构建</span></div><div class="room">32-082</div><div class="resources"></div></div></div>
 
-				<div class="day oh "><h3 class="date">4月1日 星期五</h3><div class="oh"><div class="time">07:00PM - 09:00PM</div><div class="name"><span>开发模块2：教练员服务系统交互框架，使用逻辑展示</span></div><div class="room">32-082</div><div class="resources"></div></div></div>
+				<div class="day lunch "><h3 class="date">4月1日 星期五</h3><div class="lunch"><div class="time">07:00PM - 09:00PM</div><div class="name"><span>开发模块2：教练员服务系统交互框架，使用逻辑展示</span></div><div class="room">32-082</div><div class="resources"></div></div></div>
 
 				<div class="day oh milestone ">
 					<h3 class="date">4月3日 星期日</h3>
@@ -113,6 +113,11 @@
 				</div>	
 
 				<articlemark class="mark" id="weektwo"></articlemark>
+
+				<div class="day lunch "><h3 class="date">4月5日 星期二</h3><div class="lunch"><div class="time">07:00PM - 09:00PM</div><div class="name"><span>开发模块3：编写球员技能评定表单，批量读入数据</span></div><div class="room">32-082</div><div class="resources"></div></div></div>
+
+				<div class="day lec "><h3 class="date">4月8日 星期二</h3><div class="lec"><div class="time">07:00PM - 09:00PM</div><div class="name"><span>上线发布第一期网站与调试</span><div class="lecturer">当前版本网站暂无顶级域名、未备案，功能可实际使用</div></div><div class="room">32-082</div><div class="resources"></div></div></div>
+
 				<div class="day milestone ">
 					<h3 class="date">4月10日 星期日</h3>
 					<div class="milestone">
