--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
 				<div class="day lunch "><h3 class="date">4月5日 星期二</h3><div class="lunch"><div class="time">07:00PM - 09:00PM</div><div class="name"><span>开发模块3：编写球员技能评定表单，批量读入数据</span></div><div class="room">32-082</div><div class="resources"></div></div></div>
 
-				<div class="day lec "><h3 class="date">4月8日 星期二</h3><div class="lec"><div class="time">07:00PM - 09:00PM</div><div class="name"><span>上线发布第一期网站与调试</span><div class="lecturer">当前版本网站暂无顶级域名、未备案，功能可实际使用</div></div><div class="room">32-082</div><div class="resources"></div></div></div>
+				<div class="day lec "><h3 class="date">4月8日 星期五</h3><div class="lec"><div class="time">07:00PM - 09:00PM</div><div class="name"><span>上线发布第一期网站与调试</span><div class="lecturer">当前版本网站暂无顶级域名、未备案，功能可实际使用</div></div><div class="room">32-082</div><div class="resources"></div></div></div>
 
 				<div class="day milestone ">
 					<h3 class="date">4月10日 星期日</h3>
