added author info & description

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>开发日程 ｜ Haaiteh Tennis Club</title>
+		<meta name="author" content="Xingfeng(Righthanded-Lefty) Shi">
+		<meta name="description" content="The Developer's site pertaining to Haaiteh(Beijing) Tennis Official WebApp. Contact the author to learn more.">
 
 		<link rel="stylesheet" type="text/css" href="/styles/css/main.css">
 		<script type="text/javascript" src="/scripts/script.js"></script>
@@ -145,7 +147,7 @@
 				</div>	
 
 				<articlemark class="mark" id="weekfour"></articlemark>
-				<div class="day oh "><h3 class="date">4月18日 星期一</h3><div class="oh"><div class="time">07:00PM - 09:00PM</div><div class="name"><span>待讨论：二期网站上线同期的网信办备案、实名制管理、信息保护、法律责任等</span></div><div class="room">32-082</div><div class="resources"></div></div></div>
+				<div class="day oh "><h3 class="date">4月18日 星期一</h3><div class="oh"><div class="time">07:00PM - 09:00PM</div><div class="name"><span>待讨论：二期网站上线同期的网信办备案、实名制管理、信息保护、搜索引擎优化、法律责任等</span></div><div class="room">32-082</div><div class="resources"></div></div></div>
 
 			</div>
 
