added navbar left

--- a/index.html
+++ b/index.html
@@ -15,8 +15,15 @@
 
 	<body>
 		<div class="bannered" id="mainpage">
-			<div class="navbar">
-				
+			<div class="navbar" id="navbar">
+				<div class="background container">
+					<div class="contained">
+						<div class="right">
+							<a class = "title link" href="pages/home.html">"海特网球官网重装开发计划"</a>
+						</div>
+						<div class="left"></div>
+					</div>
+				</div>
 			</div>
 		</div>
 
