added navbar right-side links

--- a/index.html
+++ b/index.html
@@ -21,7 +21,17 @@
 						<div class="right">
 							<a class = "title link" href="pages/home.html">"海特网球官网重装开发计划"</a>
 						</div>
-						<div class="left"></div>
+						<div class="left">
+							<a class="menu-toggle" onclick="toggleMenu()" role="button" aria-expanded="false" aria-controls="main-menu" aria-label="Open main menu"><i class="fa fa-bars"></i></a>
+							<div class="main-menu" id= "mainmenu" role = "navigation" aria-expanded = "false" aria-label = "Man menu">
+								<a class="link" href="pages/home.html">正在热议</a>
+								<a class="link" href="">开发日程</a>
+								<a class="link" href="">主要产品</a>
+								<a class="link" href="">模块样例</a>
+								<a class="link" href="">团队概况</a>
+								<a class="link" href="">常见问题</a>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
