--- a/pages/ad.html
+++ b/pages/ad.html
@@ -4,12 +4,32 @@
 	-->
 
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
 <head>
+	<!--html default settings-->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
-	<title></title>
+
+	<!--copyright/search engine info-->
+	<meta name="author" content="Xingfeng(Righthanded-Lefty) Shi">
+	<meta name="description" content="Advertisement for iTUSA April Event in Beijing. Provided by Haaiteh Tennis Club. Contact: Mr. Zou (tel. 13683500148). Powered by RTG Beijing. Event to be held on Apr. 28-30, 2022.">
+
+	<title>iTUSA 2022·北京站 ｜ Haaiteh Tennis Club</title>
+
+	<!--favicon settings-->
+	<!--you can create your own favicon at https://tool.lu/favicon/-->
+	<!--third-generation iPad with high-resolution Retina display: -->
+	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="../images/icon/favicon/favicon128.png">
+	<!-- iPhone with high-resolution Retina display: -->
+	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="../images/icon/favicon/favicon128.png">
+	<!-- first- and second-generation iPad: -->
+	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="../images/icon/favicon/favicon64.png">
+	<!-- non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
+	<link rel="apple-touch-icon-precomposed" href="../images/icon/favicon/favicon64.png">
+	<!-- basic favicon -->
+	<link rel="shortcut icon" href="../images/icon/favicon/favicon32.png">
+
+
 </head>
 <body>
 
