initialized ad page w/ new icon

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 							<div class="main-menu" id= "mainmenu" role = "navigation" aria-expanded = "false" aria-label = "Man menu">
 								<a class="link" href="pages/home.html">正在热议</a>
 								<a class="link" href="">开发日程</a>
-								<a class="link" href="">主要产品</a>
+								<a class="link" href="pages/ad.html">主要产品</a>
 								<a class="link" href="">模块样例</a>
 								<a class="link" href="">团队概况</a>
 								<a class="link" href="">常见问题</a>
