--- a/pages/ad.html
+++ b/pages/ad.html
@@ -24,14 +24,45 @@
 	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="../images/icon/favicon/favicon128.png">
 	<!-- first- and second-generation iPad: -->
 	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="../images/icon/favicon/favicon64.png">
-	<!-- non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
+	<!-- non-Retina iPhone, iPod Touch, and Android 2.1+ devices (57x57): -->
 	<link rel="apple-touch-icon-precomposed" href="../images/icon/favicon/favicon64.png">
-	<!-- basic favicon -->
+	<!-- basic favicon (32x32) -->
 	<link rel="shortcut icon" href="../images/icon/favicon/favicon32.png">
 
+	<!--here links the stylesheets used on this page-->
+    <link rel="stylesheet" type="text/css" href="../styles/css/event-ad.css">
 
+	<!--javascripts should not be imported here. A better place is before </body> tag-->
 </head>
+
 <body>
+	<!--navbar ceases when top of page. appears when scrolled down.-->
+	<header>
+		<nav>
+			<div id="flex-navbar-wide-screen" class="u-flex justify-between items-center">
+				<div id="event-name-abbr" class="u-flex justify-start"></div>
+
+				<nav></nav>
+				
+				<div></div>
+				
+				<div></div>
+			</div>
+		</nav>
+	</header>
+
+	<main></main>
+
+	<footer>
+		<p>Some copyright info or perhaps some author info for an &lt;article&gt;?</p>
+
+		<p>Contact the author of this page:</p>
+
+		<address>
+		  <a href="mailto:jim@rock.com">jim@rock.com</a><br>
+		  <a href="tel:+13115552368">(311) 555-2368</a>
+		</address>		
+	</footer>
 
 </body>
 </html>
