further page design ad.html -- sponsor & swiper

--- a/pages/ad.html
+++ b/pages/ad.html
@@ -72,10 +72,10 @@
 				<div id="details" class="pt-4 sm:pt-12 mx-4 sm:mx-8 xl:mx-auto">
 					<div id="details-grid-1" class="u-grid col-span-6 grid-cols-8 sm:grid-cols-6 md:gap-x-16 gap-y-2 text-pink">
 						<div class="u-flex flex-col items-start justify-center col-span-5 sm:col-span-3">
-							<h1 class="text-2xl xs:text-3xl md:text-5xl text-left">
+							<h2 class="text-2xl xs:text-3xl md:text-5xl text-left">
 								<span class="block">列席这届</span>
 								<span class="block">专业网球盛会</span>
-							</h1>
+							</h2>
 						</div>
 						<div class="u-flex flex-row gap-8 col-span-3 md:col-span-3 text-sm items-start pt-3 sm:pt-0 sm:items-end">
 							<p class="hidden md:block text-sm lg:text-lg xl:text-xl 2xl:text-2xl">
@@ -141,7 +141,34 @@
 						</div>
 					</div>
 				</div>
-				<div id="slider"></div>
+				<div id="slider" class="mx-0 px-0 mt-20 md:mt-0 sm:mx-8 xl:mx-auto">
+					<div class="relative sm:pb-20">
+						<h2 class="text-3xl text-white sm:text-5xl text-center">现场实景</h2>
+						<p class="mx-auto text-center text-sm text-white mb-8">顺义·温榆河</p>
+						<div class="swiperContainer">
+							<div style="transition-duration: 0ms; transform: translate3d(-716px, 0px, 0px);">
+								<div class="swiperItem" data-swiper-slide-index = "7"></div>
+								<div class="swiperItem" data-swiper-slide-index = "8"></div>
+								<div class="swiperItem" data-swiper-slide-index = "9"></div>
+								<div class="swiperItem" data-swiper-slide-index = "0"></div>
+								<div class="swiperItem" data-swiper-slide-index = "1"></div>
+								<div class="swiperItem" data-swiper-slide-index = "2"></div>
+								<div class="swiperItem" data-swiper-slide-index = "3"></div>
+								<div class="swiperItem" data-swiper-slide-index = "4"></div>
+								<div class="swiperItem" data-swiper-slide-index = "5"></div>
+								<div class="swiperItem" data-swiper-slide-index = "6"></div>
+								<div class="swiperItem" data-swiper-slide-index = "7"></div>
+								<div class="swiperItem" data-swiper-slide-index = "8"></div>
+								<div class="swiperItem" data-swiper-slide-index = "9"></div>
+								<div class="swiperItem" data-swiper-slide-index = "0"></div>
+								<div class="swiperItem" data-swiper-slide-index = "1"></div>
+								<div class="swiperItem" data-swiper-slide-index = "2"></div>
+							</div>
+						</div>
+						<div></div>
+						<div></div>
+					</div>
+				</div>
 				<div id="schedule"></div>
 				<div id="faq"></div>
 			</div>
