added some FAQ lines

--- a/pages/ad.html
+++ b/pages/ad.html
@@ -315,10 +315,34 @@
 								<a class="text-pink text-white-hover text-left text-xl 2xl:text-2xl" href="mailto:fluffychild@icloud.com">hey@haaitehtennis.com</a>
 							</div>
 							<div class="faqSetBox">
-								<h2 class="sm:text-xl 2xl:text-2xl">现场票都包含哪些内容？</h2>
-								<p>包含3天的现场讲授、上手实操，以及iTUSA网球教练员资格证书（一级、二级）线上课程的研修资格，时限1年。</p>
+								<h2 class="sm:text-xl 2xl:text-2xl">问：现场票都包含哪些内容？</h2>
+								<p>答：包含3天的现场讲授、上手实操，以及iTUSA网球教练员资格证书（一级、二级）线上课程的研修资格，时限1年。</p>
+								<h2 class="sm:text-xl 2xl:text-2xl mt-8">问：线上课程都包含哪些内容？</h2>
+								<p>答：本次培训对应iTUSA体系下，一级、二级网球教练员水平。线上课程是现场导师指导的理论基石及系统细致的整套专业教练员培养方案。其中格外注重iTUSA体系最擅长的视频分析模块，要求教练员从初级阶段开始即广泛尝试在教学中使用视频辅助手段，并臻于熟练。具体包含如下内容：<br>一级教练员课程：</p>
+								<ol>
+									<li>网球基本技术</li>
+									<li>网球基本技术视频分析</li>
+									<li>网球训练视频分析</li>
+									<li>慢动作视频分析</li>
+								</ol>
+								<p>二级教练员课程：</p>
+								<ol>
+									<li>网球运动生理学</li>
+									<li>网球击球速度和准确性分析</li>
+									<li>网球视频相关技术</li>
+									<li>网球硬地和沙地击球技术</li>
+									<li>网球比赛数据分析</li>
+									<li>网球运动心理学</li>
+								</ol>
+								<h2 class="sm:text-xl 2xl:text-2xl mt-8">问：我在综合类体育场馆工作，并非网球专业运动员，业余执教经验也有限，我适合报名参加此次工作坊吗？</h2>
+								<p>答：我们推荐您在报名前至少具备一定的网球运动技术基础，以更好地吸收导师所讲的专业内容。<br>
+								&emsp;&emsp;在此基础上，不论您是退役运动员、教练、场馆工作人员，还是学生、公立学校教师，乃至其他网球爱好者，只要您从事或者准备从事与网球教学相关职业，都将从iTUSA体系当中收获颇多。对于想要以最少的时间成本培养自身网球教练执业技术能力的朋友来说，直接参加高水平的培训不失为一条捷径。<br>
+								&emsp;&emsp;当然，想要实际收获转化为您的技能点和生产力，勤记笔记、积极参与互动和示范、抓住机会交流是必不可少的成功要件。</p>
 							</div>
-							<div class="faqSetBox"></div>
+							<div class="faqSetBox">
+								<h2 class="sm:text-xl 2xl:text-2xl">问：想知道举办地北京顺义的防疫政策如何？如果疫情波及，本次培训项目将作何调整？</h2>
+								<p>答：新冠疫情尚没有完全过去，主办方密切关注和积极配合所在城市的相关政策。现将北京市有关政策简述如下，如有变动我们将当天之内在网站上更新。您也可以通过“海特网球”微信号咨询。</p>
+							</div>
 						</div>
 					</div>
 				</div>
