neew page: form.html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 								<a class="link" href="pages/home.html">正在热议</a>
 								<a class="link" href="">开发日程</a>
 								<a class="link" href="pages/ad.html">主要产品</a>
-								<a class="link" href="">模块样例</a>
+								<a class="link" href="pages/form.html">模块样例</a>
 								<a class="link" href="">团队概况</a>
 								<a class="link" href="">常见问题</a>
 							</div>
