neew page: form.html

--- a/pages/form.html
+++ b/pages/form.html
@@ -14,13 +14,19 @@
 	<meta name="description" content="iTUSA online tennis player assessment (People's Republic of China ver.). Provided, translated into Chinese, by Haaiteh Tennis Club. Contact: Mr. Zou (tel. 13683500148).">
 
 	<title>iTUSA 球员培养体系 ｜ Haaiteh Tennis Club</title>
+
+	<!--here links the stylesheets used on this page-->
+    <link rel="stylesheet" type="text/css" href="../styles/css/form.css">
+
+	<!--javascripts should not be imported here. A better place is before </body> tag-->
 </head>
+
 <body>
 	<header></header>
 	<main>
 		<form>
-			<h1>Payment form</h1>
-			<p>Required fields are followed by <strong><abbr title="required">*</abbr></strong>.</p>
+			<h1>网球运动员阶段性评估 ｜ iTUSA网球教学规范流程</h1>
+			<p>必填项目以 <strong><abbr title="required">*</abbr></strong>号标注。</p>
 		</form>
 	</main>
 
