test multiple favicons

--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>开发日程 ｜ Haaiteh Tennis Club</title>
+
+		<!--favicon settings-->
+		<!--you can create your own favicon at https://tool.lu/favicon/-->
+		<!--third-generation iPad with high-resolution Retina display: -->
+		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="../images/icon/favicon/favicon-bw-128.png">
+		<!-- iPhone with high-resolution Retina display: -->
+		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="../images/icon/favicon/favicon-bw-128.png">
+		<!-- first- and second-generation iPad: -->
+		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="../images/icon/favicon/favicon-bw-64.png">
+		<!-- non-Retina iPhone, iPod Touch, and Android 2.1+ devices (57x57): -->
+		<link rel="apple-touch-icon-precomposed" href="../images/icon/favicon/favicon-bw-64.png">
+		<!-- basic favicon (32x32) -->
+		<link rel="shortcut icon" href="../images/icon/favicon/favicon-bw-32.png">
+
 		<meta name="author" content="Xingfeng(Righthanded-Lefty) Shi">
 		<meta name="description" content="The Developer's site pertaining to Haaiteh(Beijing) Tennis Official WebApp. Contact the author to learn more.">
 
