--- a/pages/home.html
+++ b/pages/home.html
@@ -8,6 +8,19 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>学员（徐*）的报告 ｜ Haaiteh Tennis Club</title>
 
+	<!--favicon settings-->
+	<!--you can create your own favicon at https://tool.lu/favicon/-->
+	<!--third-generation iPad with high-resolution Retina display: -->
+	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="../images/icon/favicon/favicon-sh-128.png">
+	<!-- iPhone with high-resolution Retina display: -->
+	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="../images/icon/favicon/favicon-sh-128.png">
+	<!-- first- and second-generation iPad: -->
+	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="../images/icon/favicon/favicon-sh-64.png">
+	<!-- non-Retina iPhone, iPod Touch, and Android 2.1+ devices (57x57): -->
+	<link rel="apple-touch-icon-precomposed" href="../images/icon/favicon/favicon-sh-64.png">
+	<!-- basic favicon (32x32) -->
+	<link rel="shortcut icon" href="../images/icon/favicon/favicon-sh-32.png">
+
     <script src="../scripts/mui.js" type="text/javascript"></script>
 <!--    <link href="../styles/mui/mui.css" rel="stylesheet"/>
 -->
