new student progress file: yingmi.md

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						</div>
 						<div class="left">
 							<a class="menu-toggle" onclick="toggleMenu()" role="button" aria-expanded="false" aria-controls="main-menu" aria-label="Open main menu"><i class="fa fa-bars"></i></a>
-							<div class="main-menu" id= "mainmenu" role = "navigation" aria-expanded = "false" aria-label = "Man menu">
+							<div class="main-menu" id= "mainmenu" role = "navigation" aria-expanded = "false" aria-label = "Main menu">
 								<a class="link" href="pages/home.html">正在热议</a>
 								<a class="link" href="">开发日程</a>
 								<a class="link" href="pages/ad.html">主要产品</a>
